# hayro

./: .gitignore  Cargo.toml  LICENSE-MIT  NOTICE.md  README.md
hayro/: Cargo.toml  README.md
hayro-bench/: Cargo.toml  README.md
hayro-bench/src/: hayro_syntax.rs  jpx_decode_bench.rs  render_bench.rs
hayro-ccitt/: Cargo.toml  README.md
hayro-ccitt/src/: bit.rs  bit_reader.rs  decode.rs  lib.rs  state_machine.rs  states.rs  tables.rs
hayro-cmap/: Cargo.toml  README.md
hayro-cmap/assets/: README.md  cmaps.brotli
hayro-cmap/src/: lib.rs  parse.rs
hayro-cmap/src/bcmap/: embedded.rs  huffman.rs  mod.rs  reader.rs
hayro-demo/: .gitignore  Cargo.toml  build.js  build.sh  package-lock.json  package.json
hayro-demo/src/: lib.rs
hayro-demo/www/: hayro_demo.js  index.html  index.js  styles.css
hayro-font/: .gitignore  Cargo.toml  README.md
hayro-font-parser/: Cargo.toml  LICENSE-MIT  README.md
hayro-font-parser/src/: argstack.rs  lib.rs
hayro-font-parser/src/cff/: cff.rs  charset.rs  charstring.rs  dict.rs  index.rs  parser.rs
hayro-font-parser/src/type1/: charstring.rs  charstring_parser.rs  decrypt.rs  mod.rs
hayro-font/src/: argstack.rs  lib.rs  log.rs  util.rs
hayro-font/src/cff/: cff.rs  charset.rs  charstring.rs  dict.rs  encoding.rs  index.rs  mod.rs  parser.rs  std_names.rs
hayro-font/src/type1/: charstring.rs  charstring_parser.rs  decrypt.rs  mod.rs  operator.rs  standard.rs  stream.rs
hayro-fuzz/: Cargo.toml  cmds.txt
hayro-fuzz/fuzz_targets/: fuzz_ccitt.rs  fuzz_jbig2.rs  fuzz_jpeg2000.rs
hayro-interpret/: Cargo.toml  README.md
hayro-interpret/assets/: README.md
hayro-interpret/examples/: extract_html.rs  extract_images.rs
hayro-interpret/src/: cache.rs  clip_path.rs  color.rs  context.rs  convert.rs  device.rs  encode.rs  glyph.rs  gradient.rs  image.rs  lib.rs  log.rs  mask.rs  ocg.rs  paint.rs  pattern.rs  shading.rs  soft_mask.rs  state.rs  types.rs  util.rs  x_object.rs
hayro-interpret/src/font/: base.rs  blob.rs  cid.rs  cmap.rs  encodings.rs  generate.py  glyph_list.rs  glyph_simulator.rs  mod.rs  outline.rs  standard.rs  standard_font.rs  true_type.rs  type1.rs  type3.rs
hayro-interpret/src/function/: mod.rs  type0.rs  type2.rs  type3.rs  type4.rs
hayro-interpret/src/interpret/: mod.rs  path.rs  state.rs  text.rs
hayro-jbig2/: .gitignore  Cargo.toml  README.md  TEST_INPUTS.md  generate_huffman_tables.py  manifest_power_jbig2.json  manifest_serenity.json  sync.py
hayro-jbig2/benches/: decode.rs
hayro-jbig2/examples/: jbig2png.rs  parse.rs
hayro-jbig2/src/: arithmetic_decoder.rs  bitmap.rs  error.rs  file.rs  gray_scale.rs  huffman_table.rs  huffman_tables_generated.rs  integer_decoder.rs  integration.rs  lazy.rs  lib.rs  page_info.rs  reader.rs  segment.rs  simd.rs  symbol_id_decoder.rs
hayro-jbig2/src/decode/: generic.rs  generic_refinement.rs  halftone.rs  mod.rs  pattern.rs  symbol.rs  text.rs
hayro-jbig2/src/dictionary/: mod.rs  pattern.rs  symbol.rs
hayro-jbig2/src/region/: generic.rs  halftone.rs  (+3 more)
hayro-jbig2/tests/: mod.rs
hayro-jpeg2000/: .gitignore  Cargo.toml  README.md  TESTS.md  manifest_openjpeg.json  manifest_serenity.json  sync.py
hayro-jpeg2000/assets/: LAB.icc  ProPhotoRGB.icc  README.md
hayro-jpeg2000/benches/: bench.sh  decode.rs
hayro-jpeg2000/examples/: png.rs
hayro-jpeg2000/src/: arithmetic_decoder.rs  bit_reader.rs  bitmap.rs  bitplane.rs  boxes.rs  build.rs  byte_reader.rs  codestream.rs  decode.rs  error.rs  idwt.rs  image.rs  integration.rs  lib.rs  log.rs  main.rs  math.rs  mct.rs  packet.rs  progression.rs  reader.rs  rect.rs  segment.rs  simd.rs  t2.rs  tag_tree.rs  tile.rs  util.rs
hayro-jpeg2000/tests/: mod.rs
hayro-render/: .gitignore  Cargo.toml  blacklist.txt  download.py  gen_tests.py  manifest.json  manifest_pdfbox.json  manifest_pdfjs.json  pdfbox_sources.json  pdfbox_sources_todo.json  sync_pdfbox_sources.py  sync_pdfjs.py  whitelist.txt
hayro-render/assets/: README.md  pattern_shading_type3_collection.link
hayro-render/examples/: render.rs
hayro-render/pdfs/: image_jbig2_10.link  image_jbig2_11.link  image_jbig2_14.link  image_jbig2_15.link  image_jbig2_2.link  image_jbig2_8.link  issue42.link  pattern_shading_type6_3.link  pattern_shading_type7.link  pattern_shading_type7_2.link  pdf_render_issue14.link  pdfbox-3647.link  pdfjs_issue2642.link
hayro-render/src/: coarse.rs  convert.rs  encode.rs  flatten.rs  lib.rs  mask.rs  paint.rs  pixmap.rs  render.rs  strip.rs  tile.rs
hayro-render/tests/: fuzzed.rs  gen_tests.py  mod.rs  tests.rs
hayro-svg/: Cargo.toml  README.md
hayro-svg/examples/: convert.rs
hayro-svg/src/: clip.rs  glyph.rs  image.rs  lib.rs  mask.rs  paint.rs  path.rs  render.rs  renderer.rs
hayro-syntax/: Cargo.toml  NOTICE  README.md  SUPPORTED.md
hayro-syntax/examples/: content.rs  iterate.rs  jbig2.rs
hayro-syntax/src/: bit.rs  bit_reader.rs  byte_reader.rs  cache.rs  content.rs  data.rs  lib.rs  log.rs  math.rs  metadata.rs  page.rs  pdf.rs  reader.rs  sync.rs  transform.rs  trivia.rs  util.rs  write.rs  xref.rs
hayro-tests/: .gitignore  Cargo.toml  README.md  benchmark_renderers.sh  blacklist.txt  blacklist_pdfjs.txt  gen_tests.py  manifest.json  manifest_corpus.json  manifest_custom.json  manifest_pdfbox.json  manifest_pdfium.json  manifest_pdfjs.json  pdfbox_blacklist.txt  pdfbox_sources.json  pdfbox_sources_todo.json  sync.py  sync_pdfjs.py  whitelist.txt
hayro-tests/assets/: ccitt_ignore_list.txt  corpus_ignore_list.txt  jpx_ignore_list.txt  jpx_images.txt
hayro-tests/examples/: rewrite_pdfs.rs
hayro-tests/pdfs/: issue40.link  issue51.link  pattern_shading_type7.link  pdfjs_issue18062.link
hayro-tests/src/: bench_hayro_syntax.rs  experiment.rs  iterate.rs
hayro-tests/tests/: crash.rs  custom.rs  fuzz.rs  fuzzed.rs  load.rs  mod.rs  render.rs  svg.rs  write.rs
hayro-write/: Cargo.toml  README.md
hayro-write/src/: lib.rs  log.rs  primitive.rs
hayro/examples/: render.rs
hayro/src/: coarse.rs  ctx.rs  flatten.rs  lib.rs  mask.rs  paint.rs  pixmap.rs  render.rs  renderer.rs  strip.rs  tile.rs
(+922 files in other folders)
