[workspace]
resolver = "2"
members = [
    "hayro-interpret", 
    "hayro", 
    "hayro-syntax", 
    "hayro-demo", 
    "hayro-tests", 
    "hayro-write", 
    "hayro-svg",
    "hayro-jpeg2000",
    "hayro-common"
]

[workspace.package]
authors = ["Laurenz Stampfl <laurenz.stampfl@gmail.com>"]
edition = "2024"
repository = "https://github.com/LaurenzV/hayro"
readme = "README.md"
license = "Apache-2.0"

[workspace.dependencies]
hayro = { path = "hayro", version = "0.4.0", default-features = false }
hayro-common = { path = "hayro-common", version = "0.1.0", default-features = false }
hayro-font = { path = "hayro-font", version = "0.3.0", default-features = false }
hayro-interpret = { path = "hayro-interpret", version = "0.4.0", default-features = false }
hayro-jpeg2000 = { path = "hayro-jpeg2000" }
hayro-syntax = { path = "hayro-syntax", version = "0.4.0", default-features = false }
hayro-svg = { path = "hayro-svg", version = "0.2.0", default-features = false }
hayro-write = { path = "hayro-write", version = "0.3.0", default-features = false }

bitflags = { version = "2.9" }
bytemuck = { version = "1" }
image = { version = "0.25", default-features = false }
kurbo = { version = "0.12.0" }
log = { version = "0.4" }
resvg = { version = "0.45.1" }
flate2 = { version = "1", default-features = false, features = ["zlib-rs"] }
once_cell = { version = "1" }
phf = { version = "0.13.1" }
moxcms = { git = "https://github.com/awxkee/moxcms", rev = "f7b3d6d" }
rustc-hash = { version = "2" }
siphasher = "1"
skrifa = { version = "0.37.0" }
smallvec = { version = "1" }
yoke = { version = "0.8" }
pdf-writer = "0.14.0"
sitro = { git = "https://github.com/LaurenzV/sitro", rev="fb804b3" }
xmlwriter = { version = "0.1" }
base64 = { version = "0.22" }
zune-jpeg = { version = "0.5.3" }
vello_cpu = { git = "https://github.com/linebender/vello", rev = "9ae9a530", default-features = false, features = ["std", "png"] }
fast_image_resize = { version = "5", default-features = false }
