[workspace]
resolver = "2"
members = [
    "hayro-interpret",
    "hayro",
    "hayro-syntax",
    "hayro-demo",
    "hayro-tests",
    "hayro-write",
    "hayro-svg",
    "hayro-jpeg2000",
    "hayro-jbig2",
    "hayro-common",
    "hayro-ccitt",
    "hayro-fuzz"
]

[workspace.package]
authors = ["Laurenz Stampfl <laurenz.stampfl@gmail.com>"]
edition = "2024"
repository = "https://github.com/LaurenzV/hayro"
readme = "README.md"
license = "Apache-2.0 OR MIT"

[workspace.dependencies]
hayro = { path = "hayro", version = "0.4.0", default-features = false }
hayro-common = { path = "hayro-common", version = "0.1.0", default-features = false }
hayro-ccitt = { path = "hayro-ccitt", version = "0.2.0", default-features = false }
hayro-font = { path = "hayro-font", version = "0.3.0", default-features = false }
hayro-interpret = { path = "hayro-interpret", version = "0.4.0", default-features = false }
hayro-jpeg2000 = { path = "hayro-jpeg2000", default-features = false }
hayro-jbig2 = { path = "hayro-jbig2", default-features = false }
hayro-syntax = { path = "hayro-syntax", version = "0.4.0", default-features = false }
hayro-svg = { path = "hayro-svg", version = "0.2.0", default-features = false }
hayro-write = { path = "hayro-write", version = "0.3.0", default-features = false }

bitflags = { version = "2.9" }
bytemuck = { version = "1" }
image = { version = "0.25", default-features = false }
kurbo = { version = "0.12.0" }
log = { version = "0.4" }
resvg = { version = "0.45.1" }
flate2 = { version = "1", default-features = false, features = ["zlib-rs"] }
once_cell = { version = "1" }
phf = { version = "0.13.1" }
moxcms = { version = "0.7.11" }
rustc-hash = { version = "2" }
siphasher = "1"
skrifa = { version = "0.40.0" }
smallvec = { version = "1" }
yoke = { version = "0.8" }
pdf-writer = "0.14.0"
sitro = { git = "https://github.com/LaurenzV/sitro", rev="fb804b3" }
xmlwriter = { version = "0.1" }
base64 = { version = "0.22" }
zune-jpeg = { version = "0.5" }
vello_cpu = { version = "0.0.5", default-features = false, features = ["std", "png", "u8_pipeline"] }
fast_image_resize = { version = "5", default-features = false }
fearless_simd = "0.3.0"

[workspace.lints]
# This one may vary depending on the project.
#rust.unsafe_code = "forbid"

# LINEBENDER LINT SET - Cargo.toml - v7
# See https://linebender.org/wiki/canonical-lints/
rust.keyword_idents_2024 = "forbid"
rust.non_ascii_idents = "forbid"
rust.non_local_definitions = "forbid"
rust.unsafe_op_in_unsafe_fn = "forbid"

rust.elided_lifetimes_in_paths = "warn"
#rust.missing_debug_implementations = "warn"
rust.missing_docs = "warn"
rust.trivial_numeric_casts = "warn"
rust.unnameable_types = "warn"
rust.unreachable_pub = "warn"
rust.unused_import_braces = "warn"
rust.unused_lifetimes = "warn"
rust.unused_macro_rules = "warn"
rust.unused_qualifications = "warn"

clippy.too_many_arguments = "allow"

#clippy.allow_attributes_without_reason = "warn"
#clippy.cast_possible_truncation = "warn"
clippy.collection_is_never_read = "warn"
clippy.default_trait_access = "warn"
clippy.dbg_macro = "warn"
clippy.debug_assert_with_mut_call = "warn"
clippy.doc_markdown = "warn"
clippy.fn_to_numeric_cast_any = "warn"
clippy.infinite_loop = "warn"
clippy.large_stack_arrays = "warn"
clippy.mismatching_type_param_order = "warn"
#clippy.missing_assert_message = "warn"
#clippy.missing_fields_in_debug = "warn"
clippy.same_functions_in_if_condition = "warn"
clippy.semicolon_if_nothing_returned = "warn"
#clippy.should_panic_without_expect = "warn"
clippy.todo = "warn"
clippy.unseparated_literal_suffix = "warn"
clippy.use_self = "warn"

#clippy.cargo_common_metadata = "warn"
clippy.negative_feature_names = "warn"
clippy.redundant_feature_names = "warn"
clippy.wildcard_dependencies = "warn"
# END LINEBENDER LINT SET

# Makes it easier to debug with a profiler
[profile.instrument]
inherits = "release"
debug = true
strip = "none"

[profile.fuzz]
inherits = "release"
debug = 1
overflow-checks = true
