[package]
name = "hayro-bench"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "hayro_syntax"
path = "src/hayro_syntax.rs"

[[bin]]
name = "render_bench"
path = "src/render_bench.rs"

[dependencies]
hayro = { workspace = true, features = ["embed-fonts", "embed-cmaps"] }
hayro-syntax = { workspace = true, features = ["std", "unsafe"] }
pdfium-render = "0.9.0"
walkdir = "2"
