[package]
name = "hayro-bench"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "hayro_syntax"
path = "src/hayro_syntax.rs"

[[bin]]
name = "render_bench"
path = "src/render_bench.rs"

[[bin]]
name = "jpx_decode_bench"
path = "src/jpx_decode_bench.rs"

[dependencies]
hayro = { workspace = true, features = ["embed-fonts", "embed-cmaps"] }
hayro-jpeg2000 = { workspace = true, features = ["std", "simd"] }
hayro-syntax = { workspace = true, features = ["std", "unsafe"] }
image = { workspace = true, features = ["png"] }
pdfium-render = "0.9.0"
walkdir = "2"
