[package]
name = "hayro-ccitt"
version = "0.3.0"
description = "A decoder for group 3 and group 4 CCITT images."
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
readme = "README.md"

[lints]
workspace = true
