[package]
name = "hayro-cmap"
version = "0.1.0"
description = "A parser for CMap files."
authors = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[features]
default = ["embed-cmaps"]
std = []
# Embed the 61 predefined cmaps into the binary. Adds about ~250KB of brotli-encoded data.
embed-cmaps = ["std", "dep:brotli"]

[dependencies]
hayro-postscript = { workspace = true }
brotli = { workspace = true, optional = true, features = ["std"] }

[lints]
workspace = true
