[package]
name = "hayro-demo"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
  "Blob",
  "BlobPropertyBag",
  "Url",
]

[dependencies.hayro-syntax]
path = "../hayro-syntax"
default-features = false

[dependencies.hayro-render]
path = "../hayro-render"
default-features = false 