[package]
name = "hayro-demo"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
console_error_panic_hook = "0.1.7"
log = "0.4"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
  "Blob",
  "BlobPropertyBag",
  "Url",
  "Window",
]

[dependencies.hayro-syntax]
workspace = true

[dependencies.hayro-render]
workspace = true