[package]
name = "hayro-demo"
version = "0.1.0"
description = "A demo application for hayro using WASM."
authors = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
console_error_panic_hook = "0.1.7"
log = "0.4"
hayro = { workspace = true, features = ["embed-fonts"]}

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
  "Blob",
  "BlobPropertyBag",
  "Url",
  "Window",
]