[package]
name = "hayro-font"
version = "0.1.0"
authors = [
    "Laurenz Stampfl <laurenz.stampfl@gmail.com>",
]
keywords = ["pdf", "cff", "type1"]
edition = { workspace = true }
license = { workspace = true }
description = "A parser for CFF and Type1 fonts."
repository = { workspace = true }

[dependencies]
log =  { workspace = true }
phf = { workspace = true }
