[package]
name = "hayro-font"
description = "A parser for CFF and Type1 fonts."
keywords = ["pdf", "cff", "type1"]
version = "0.4.0"
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
readme = "README.md"

[dependencies]
log =  { workspace = true }
phf = { workspace = true, features = ["macros"] }

[features]
default = ["std"]
std = []

[lints]
workspace = true
