[package]
name = "hayro-interpret"
version = "0.5.0"
description = "A crate for interpreting PDF files."
edition = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
readme = "README.md"

[dependencies]
hayro-syntax = { workspace = true, features = ["std", "images"] }
kurbo = { workspace = true }
smallvec = { workspace = true }
log = { workspace = true }
moxcms = { workspace = true }
phf = { workspace = true, features = ["macros"] }
skrifa = { workspace = true }
yoke = { workspace = true, features = ["derive"]}
hayro-font = { workspace = true }
siphasher = { workspace = true }
bitflags = { workspace = true }
rustc-hash = { workspace = true }

[dev-dependencies]
image = { workspace = true, features = ["png"] }

[features]
default = ["embed-fonts"]
# Embed a light-weight set of fonts (around 240KB) that can be used as a substitute for the 14 PDF standard fonts.
embed-fonts = []

[lints]
workspace = true