[package]
name = "hayro-jpeg2000"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true

[dependencies]
hayro-common = { workspace = true }
log = { workspace = true }

[dev-dependencies]
image = { version = "0.25.8", default-features = false, features = ["png"] }
moxcms = { version = "0.7.9", default-features = false }
indicatif = { version = "0.17", features = ["rayon"] }
rayon = "1.10"

[[test]]
name = "asset_suite"
path = "tests/mod.rs"
harness = false
