[package]
name = "hayro-jpeg2000"
version = "0.1.1"
description = "A memory-safe, pure-Rust JPEG 2000 decoder."
authors.workspace = true
edition.workspace = true
repository.workspace = true
readme = "README.md"
license.workspace = true

[dependencies]
log = { workspace = true }
fearless_simd = { workspace = true, optional = true }

[features]
default = ["simd"]
simd = ["fearless_simd"]

[lints]
workspace = true

[dev-dependencies]
image = { version = "0.25.8", default-features = false, features = ["png"] }
moxcms = { workspace = true }
indicatif = { version = "0.17", features = ["rayon"] }
rayon = "1.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[[test]]
name = "asset_suite"
path = "tests/mod.rs"
harness = false
