[package]
name = "hayro-jpeg2000"
version = "0.2.0"
description = "A memory-safe, pure-Rust JPEG 2000 decoder."
authors = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
readme = "README.md"

[dependencies]
log = { workspace = true, optional = true }
fearless_simd = { workspace = true, optional = true }
image = { workspace = true, default-features = false, optional = true }
moxcms = { workspace = true, optional = true }

[features]
default = ["std", "simd", "image"]
# Enable std library support. Disable for no_std environments.
std = []
# Enable SIMD via `fearless_simd`.
simd = ["fearless_simd", "std"]
# Integration with the `image` crate.
image = ["dep:image", "dep:moxcms", "std"]
# Enable logging via the `log` crate.
logging = ["dep:log"]

[lints]
workspace = true

[dev-dependencies]
image = { workspace = true, default-features = false, features = ["png"] }
indicatif = { version = "0.17", features = ["rayon"] }
rayon = "1.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[[test]]
name = "asset_suite"
path = "tests/mod.rs"
harness = false
