[package]
name = "hayro-render"
version = "0.1.0"
edition = "2024"
autotests = false

[dependencies]
hayro-syntax = { path = "../hayro-syntax", default-features = false }
hayro-interpret = { path = "../hayro-interpret", default-features = false }
kurbo = { workspace = true }
peniko = { workspace = true }
image = { workspace = true, features = ["png"] }
bytemuck = { workspace = true }
smallvec = { workspace = true }
rustc-hash = { workspace = true }

[dev-dependencies]
log = { workspace = true }

[features]
default = []
jpeg2000 = ["hayro-interpret/jpeg2000"]

