[package]
name = "hayro-svg"
version = "0.2.0"
description = "Converting PDF pages into SVG files."
authors.workspace = true
edition.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true

[dependencies]
hayro-interpret = { workspace = true }
xmlwriter = { workspace = true }
siphasher = { workspace = true }
kurbo = { workspace = true }
image = { workspace = true, features = ["png"] }
base64 = { workspace = true }

[features]
default = ["embed-fonts"]
embed-fonts = ["hayro-interpret/embed-fonts"]

[dev-dependencies]
log = { workspace = true }