[package]
name = "hayro-svg"
version = "0.3.0"
description = "Converting PDF pages into SVG files."
authors = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
readme = "README.md"
license = { workspace = true }

[dependencies]
hayro-interpret = { workspace = true }
xmlwriter = { workspace = true }
siphasher = { workspace = true }
kurbo = { workspace = true }
image = { workspace = true, features = ["png"] }
base64 = { workspace = true }

[features]
default = ["embed-fonts", "embed-cmaps"]
embed-fonts = ["hayro-interpret/embed-fonts"]
# Embed the 61 predefined cmaps into the binary. Adds about ~250KB of brotli-encoded data.
embed-cmaps = ["hayro-interpret/embed-cmaps"]

[dev-dependencies]
log = { workspace = true }

[lints]
workspace = true