[package]
name = "hayro-syntax"
version = "0.5.0"
description = "A low-level crate for reading PDF files."
authors = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
readme = "README.md"

[features]
default = ["std", "images"]
std = ["dep:flate2", "hayro-jbig2?/std", "hayro-jpeg2000?/std", "hayro-jpeg2000?/simd", "dep:rustc-hash", "zune-jpeg?/std"]
images = ["dep:zune-jpeg", "dep:hayro-ccitt", "dep:hayro-jbig2", "dep:hayro-jpeg2000"]

[dependencies]
log = { workspace = true }
rustc-hash = { workspace = true, optional = true }
smallvec = { workspace = true }
flate2 = { workspace = true, optional = true }

zune-jpeg = { workspace = true, features = ["neon", "x86"], optional = true }
hayro-ccitt = { workspace = true, optional = true }
hayro-jbig2 = { workspace = true, optional = true }
hayro-jpeg2000 = { workspace = true, optional = true }

[lints]
workspace = true

[dev-dependencies]
sha2 = "0.10"
md5 = "0.8"
aes = "0.8.4"
cbc = "0.1.2"
