[package]
name = "hayro-syntax"
version = "0.7.0"
description = "A low-level crate for reading PDF files."
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
readme = "README.md"

[features]
default = ["std", "images"]
std = ["hayro-jbig2?/std", "hayro-jpeg2000?/std", "dep:rustc-hash", "zune-jpeg?/std"]
images = ["dep:zune-jpeg", "dep:hayro-ccitt", "dep:hayro-jbig2", "dep:hayro-jpeg2000"]
unsafe = [
    "std",
    "dep:flate2",
    "dep:memchr",
    "hayro-jbig2?/simd",
    "hayro-jpeg2000?/simd",
    "zune-jpeg?/x86",
    "zune-jpeg?/neon",
]
logging = ["dep:log", "hayro-jpeg2000?/logging"]

[dependencies]
log = { workspace = true, optional = true }
rustc-hash = { workspace = true, optional = true }
smallvec = { workspace = true }
flate2 = { workspace = true, optional = true }
memchr = { workspace = true, optional = true }

zune-jpeg = { workspace = true, optional = true }
hayro-ccitt = { workspace = true, optional = true }
hayro-jbig2 = { workspace = true, optional = true }
hayro-jpeg2000 = { workspace = true, optional = true }

[lints]
workspace = true

[dev-dependencies]
sha2 = "0.10"
md5 = "0.8"
aes = "0.8.4"
cbc = "0.1.2"
