[package]
name = "hayro-tests"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true
publish = false
autotests = false

[[test]]
name = "tests"
path = "tests/mod.rs"

[dependencies]
hayro = { workspace = true , features = ["jpeg2000"] }
hayro-write = { workspace = true }
hayro-svg = { workspace = true }
pdf-writer = { workspace = true }
resvg = { workspace = true }

[dev-dependencies]
once_cell = { workspace = true }
hayro-syntax = { workspace = true }
image = {  workspace = true }
oxipng = { workspace = true }
sitro = { workspace = true }
