[package]
name = "hayro-tests"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true
publish = false
autotests = false

[[bin]]
name = "iterate"
path = "src/iterate.rs"

[[test]]
name = "tests"
path = "tests/mod.rs"

[dependencies]
hayro = { workspace = true }
hayro-write = { workspace = true }
hayro-svg = { workspace = true }
hayro-syntax = { workspace = true }
pdf-writer = { workspace = true }
resvg = { workspace = true }
walkdir = "2"
rayon = "1.8"
memchr = { version = "2.7.6"}


[dev-dependencies]
once_cell = { workspace = true }
hayro-syntax = { workspace = true }
image = {  workspace = true }
sitro = { workspace = true }
