[package]
name = "hayro-tests"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true
publish = false
autotests = false

[[bin]]
name = "experiment"
path = "src/experiment.rs"

[[test]]
name = "tests"
path = "tests/mod.rs"

[dependencies]
hayro = { workspace = true }
hayro-write = { workspace = true }
hayro-svg = { workspace = true }
hayro-syntax = { workspace = true }
hayro-jpeg2000 = { workspace = true, features = ["image"] }
pdf-writer = { workspace = true }
image = { workspace = true, default-features = false}
resvg = { workspace = true }
walkdir = "2"
rayon = "1.11"
memchr = { version = "2.7.6"}


[dev-dependencies]
once_cell = { workspace = true }
hayro-syntax = { workspace = true }
image = {  workspace = true }
sitro = { workspace = true }
