[package]
name = "hayro-write"
version = "0.2.0"
description = "A crate for rewriting pages of a PDF file."
authors = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[dependencies]
hayro-syntax = { workspace = true }
pdf-writer = { workspace = true }
flate2 = { workspace = true }
log = { workspace = true }
