[package]
name = "hayro-write"
version = "0.5.1"
description = "A crate for rewriting pages of a PDF file."
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
readme = "README.md"
repository = { workspace = true }
license = { workspace = true }

[dependencies]
hayro-syntax = { workspace = true, features = ["std", "unsafe"] }
pdf-writer = { workspace = true }
flate2 = { workspace = true }
log = { workspace = true, optional = true }

[features]
logging = ["dep:log", "hayro-syntax/logging"]

[lints]
workspace = true
