[package]
name = "hayro"
version = "0.3.0"
description = "A rasterizer for PDF files."
edition = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[dependencies]
hayro-interpret = { workspace = true }
kurbo = { workspace = true }
image = { workspace = true, features = ["png"] }
bytemuck = { workspace = true, features = ["bytemuck_derive"] }

[dev-dependencies]
log = { workspace = true }

[features]
default = ["embed-fonts"]
jpeg2000 = ["hayro-interpret/jpeg2000"]
embed-fonts = ["hayro-interpret/embed-fonts"]

