[package]
name = "hayro"
version = "0.4.0"
description = "A rasterizer for PDF files."
edition = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
readme = "README.md"

[dependencies]
hayro-interpret = { workspace = true }
kurbo = { workspace = true }
image = { workspace = true, features = ["png"] }
bytemuck = { workspace = true, features = ["bytemuck_derive"] }
vello_cpu = { workspace = true }
fast_image_resize = { workspace = true }

[dev-dependencies]
log = { workspace = true }

[features]
default = ["embed-fonts"]
embed-fonts = ["hayro-interpret/embed-fonts"]

[lints]
workspace = true

