[package]
name = "hayro"
version = "0.5.0"
description = "A rasterizer for PDF files."
edition = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
readme = "README.md"

[dependencies]
hayro-interpret = { workspace = true }
kurbo = { workspace = true }
image = { workspace = true, features = ["png"] }
bytemuck = { workspace = true, features = ["bytemuck_derive"] }
vello_cpu = { workspace = true }
fast_image_resize = { workspace = true }

[dev-dependencies]
log = { workspace = true }

[features]
default = ["embed-fonts", "embed-cmaps"]
embed-fonts = ["hayro-interpret/embed-fonts"]
# Embed the 61 predefined cmaps into the binary. Adds about ~150KB of brotli-encoded data.
embed-cmaps = ["hayro-interpret/embed-cmaps"]

[lints]
workspace = true

